--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,21 +1,39 @@
 buildscript {
-    ext {
-        buildToolsVersion = "34.0.0"
-        minSdkVersion = 21
-        compileSdkVersion = 34
-        targetSdkVersion = 34
-        ndkVersion = "25.1.8937393"
-        kotlinVersion = "1.8.0"
-    }
-    repositories {
-        google()
-        mavenCentral()
-    }
+   repositories {
+    google()
+    jcenter()
+}
+
     dependencies {
-        classpath("com.android.tools.build:gradle")
-        classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        classpath 'com.android.tools.build:gradle:7.3.0' // Update to a valid version
+    }
+}
+plugins {
+    id 'com.android.application'
+    id 'com.facebook.react' version '2.0.1'
+}
+
+android {
+    compileSdkVersion 30
+    defaultConfig {
+        applicationId "com.example.appdogelunar"
+        minSdkVersion 21
+        targetSdkVersion 30
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
 }
 
-apply plugin: "com.facebook.react.rootproject"
+dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "com.facebook.react:react-native:0.66.4"
+    // Add other dependencies as needed for your application
+}
