--- a/package.json
+++ b/package.json
@@ -10,8 +10,31 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.5",
+    "expo": "^50.0.4",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-modules-core": "^1.11.8",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.3"
+    "react-native": "0.73.2",
+    "react-native-axios": "^0.17.1",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-cli": "^2.0.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-table-component": "^1.2.2",
+    "react-native-touchable-scale": "^2.2.0",
+    "react-native-vector-icons": "^10.0.3",
+    "toastify-react-native": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
